.circleci/argocd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dias-vividos-cli
  namespace: default
  labels:
    app: dias-vividos-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dias-vividos-cli
  template:
    metadata:
      labels:
        app: dias-vividos-cli
    spec:
      containers:
      - name: dias-vividos-cli
        image: guillermors28/dias-vividos-cli:latest
        ports:
        - containerPort: 5000
