.circleci/argocd-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30082   # Puedes cambiarlo si ya está en uso
    - name: https
      port: 443
      targetPort: 8080
      nodePort: 30443   # Puedes cambiarlo si ya está en uso
