.circleci/argocd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  selector:
    app.kubernetes.io/name: argocd-server
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30082
    - name: https
      port: 443
      targetPort: 8080
      nodePort: 30443
