.circleci/dias-vividos-cli-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: dias-vividos-cli-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: dias-vividos-cli
  ports:
    - name: http
      port: 80
      targetPort: 5000
