.circleci/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: practica-cicd-service
  namespace: default
spec:
  selector:
    app: practica-cicd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30007  # Puerto accesible en el host
  type: NodePort
